add support for ignore option

--- a/test/expected/ignore_option.html
+++ b/test/expected/ignore_option.html
@@ -2,19 +2,20 @@
 <html>
   <head>
     <title>test</title>
-    <script src="test.js?v=0.2.0"></script>
+    <script src="//my.cdn.example.com/tmp/test.js"></script>
     <script>
       console.log('testing');
     </script>
-    <link href="test.css?v=0.2.0" rel="stylesheet">
+    <link href="//my.cdn.example.com/tmp/test.css" rel="stylesheet">
     <link href="//cdn.1.test.com/test.css" rel="stylesheet">
   </head>
   <body>
-    <img src="testing.png?v=0.2.0" alt="">
-    <img src="testing.gif?v=0.2.0" alt="">
-    <img src="testing.jpg?v=0.2.0" alt="">
-    <img src="testing.jpeg?v=0.2.0" alt="">
-    <script src="test2.js?v=0.2.0"></script>
+    <img src="//my.cdn.example.com/tmp/testing.png" alt="">
+    <img src="//my.cdn.example.com/tmp/testing.gif" alt="">
+    <img src="//my.cdn.example.com/tmp/testing.jpg" alt="">
+    <img src="//my.cdn.example.com/tmp/testing.jpeg" alt="">
+    <script src="//my.cdn.example.com/tmp/test2.js"></script>
+    <script src="no/cdn/test3.js"></script>
     <script src="//cdn.2.test.com/test2.js"></script>
   </body>
 </html>
