--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -15,6 +15,7 @@
     <img src="testing.jpg" alt="">
     <img src="testing.jpeg" alt="">
     <script src="test2.js"></script>
+    <script src="no/cdn/test3.js"></script>
     <script src="//cdn.2.test.com/test2.js"></script>
   </body>
 </html>
