--- a/test/expected/cdn_option.html
+++ b/test/expected/cdn_option.html
@@ -15,6 +15,7 @@
     <img src="//my.cdn.example.com/tmp/testing.jpg" alt="">
     <img src="//my.cdn.example.com/tmp/testing.jpeg" alt="">
     <script src="//my.cdn.example.com/tmp/test2.js"></script>
+    <script src="//my.cdn.example.com/tmp/no/cdn/test3.js"></script>
     <script src="//cdn.2.test.com/test2.js"></script>
   </body>
 </html>
