Added tests and functionality for inline background images in the HTML. Also opened SVGs up to be CDNed as well

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -14,6 +14,7 @@
     <img src="testing.gif" alt="">
     <img src="testing.jpg" alt="">
     <img src="testing.jpeg" alt="">
+    <div style="background-image: url('testing.jpg')"></div>
     <script src="test2.js"></script>
     <script src="no/cdn/test3.js"></script>
     <script src="//cdn.2.test.com/test2.js"></script>
