--- a/test/expected/ignore_option.html
+++ b/test/expected/ignore_option.html
@@ -14,6 +14,7 @@
     <img src="//my.cdn.example.com/tmp/testing.gif" alt="">
     <img src="//my.cdn.example.com/tmp/testing.jpg" alt="">
     <img src="//my.cdn.example.com/tmp/testing.jpeg" alt="">
+    <div style="background-image: url('//my.cdn.example.com/tmp/testing.jpg')"></div>
     <script src="//my.cdn.example.com/tmp/test2.js"></script>
     <script src="no/cdn/test3.js"></script>
     <script src="//cdn.2.test.com/test2.js"></script>
