Added tests to check any allowed image file types for both img tags as well as inline background images.

--- a/test/expected/all_opts.html
+++ b/test/expected/all_opts.html
@@ -14,7 +14,12 @@
     <img src="//my.cdn.example.com/assets/testing.gif" alt="">
     <img src="//my.cdn.example.com/assets/testing.jpg" alt="">
     <img src="//my.cdn.example.com/assets/testing.jpeg" alt="">
+    <img src="//my.cdn.example.com/assets/testing.svg" alt="">
+    <div style="background-image: url('//my.cdn.example.com/assets/testing.png')"></div>
+    <div style="background-image: url('//my.cdn.example.com/assets/testing.gif')"></div>
     <div style="background-image: url('//my.cdn.example.com/assets/testing.jpg')"></div>
+    <div style="background-image: url('//my.cdn.example.com/assets/testing.jpeg')"></div>
+    <div style="background-image: url('//my.cdn.example.com/assets/testing.svg')"></div>
     <script src="//my.cdn.example.com/assets/test2.js"></script>
     <script src="no/cdn/test3.js"></script>
     <script src="//cdn.2.test.com/test2.js"></script>
